# num-modular

./: Cargo.toml
bench/: Cargo.toml
bench/benches/: double.rs  modops.rs
src/: barrett.rs  bigint.rs  lib.rs  mersenne.rs  preinv.rs  prim.rs  reduced.rs
