[package]
name = "num-modular"
version = "0.6.1"
edition = "2024"
rust-version = "1.93.0"

repository = "https://github.com/cmpute/num-modular"
keywords = ["mathematics", "numeric", "number-theory", "modular", "montgomery"]
categories = ["mathematics", "algorithms", "no-std"]
documentation = "https://docs.rs/num-modular"
license = "Apache-2.0"
description = """
Implementation of efficient integer division and modular arithmetic operations with generic number types.
Supports various backends including num-bigint, etc..
"""
readme = "README.md"

[dependencies]
num-integer = { workspace = true, optional = true }
num-traits = { workspace = true, optional = true }
num-bigint = { workspace = true, optional = true }

[dev-dependencies]
rand = { workspace = true }

[workspace]
members = [
  "bench",
]

[workspace.dependencies]
num-integer = { version = "0.1.46" }
num-traits = { version = "0.2.19" }
num-bigint = { version = "0.4.6", default-features = false }
rand = "0.10.0"
crypto-bigint = { version = "0.7.0-rc.27" }
criterion = "0.8"
num-modular = { version = "0.6.1", path = "." }

[patch.crates-io]
num-bigint = { git = "https://github.com/earthlings-dev/num-bigint" }
rand = { git = "https://github.com/earthlings-dev/rand" }
rand_core = { git = "https://github.com/earthlings-dev/rand_core" }
getrandom = { git = "https://github.com/earthlings-dev/getrandom" }
crypto-bigint = { git = "https://github.com/earthlings-dev/rustcrypto-crypto-bigint" }

[package.metadata.docs.rs]
all-features = true

[features]
std = []
