[package]
name = "num-modular-bench"
version = "0.0.0"
publish = false
edition = "2024"
rust-version = "1.93.0"

[[bench]]
name = "modops"
harness = false

[[bench]]
name = "double"
harness = false

[dependencies]
num-integer = { workspace = true }
num-traits = { workspace = true }
num-modular = { workspace = true }
rand = { workspace = true }
criterion = { workspace = true }

ethnum = { version = "1.5.2", optional = true }
primitive-types = { version = "0.14", optional = true }
crypto-bigint = { workspace = true, optional = true }
uint = { version = "0.10.0", path = "../../paritytech-parity-common/uint", optional = true }
zkp-u256 = { version = "0.2.1", optional = true }

[features]
default = ['ethnum']
